--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="tc-l pv3 ph3 ph4-ns">
         <h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
-          Chloe, the Architect
+          365 months
         </h1>
         
       </div>
@@ -128,7 +128,7 @@
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
           <a href="https://synergit.github.io/posts/k8s-day1/" class="color-inherit dim link">
-            K8s Day One
+            Month one 
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
